--- a/frontend/stylesheets/chart.css.scss
+++ b/frontend/stylesheets/chart.css.scss
@@ -25,6 +25,7 @@
 
 /* Modal Content */
 
+/*
 .modal-content-amplification {
   background-color: #fefefe;
   margin: auto;
@@ -150,7 +151,7 @@
     padding-left: 0;
   }
 }
-
+*/
 
 /* The Close Button */
 
