--- a/frontend/stylesheets/fonts.css.scss
+++ b/frontend/stylesheets/fonts.css.scss
@@ -123,7 +123,7 @@
   font-size: 18px;
 }
 
-H3-Amplification {
+.H3-Amplification {
   font-family: "dinot-bold";
   font-size: 16.25px;
   line-height: 24px;
@@ -133,11 +133,13 @@ H3-Amplification {
 .H2R {
   font-family: "dinot-regular";
   font-size: 20px;
+  font-weight: normal;
 }
 
 .H3R {
   font-family: "dinot-regular";
   font-size: 18px;
+  font-weight: normal;
 }
 
 .SH {
