--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -92,7 +92,10 @@
     border: 0;
     outline: 0;
     background: transparent;
-    width: 30px;
+    width: 60px;
+    &.cycles-input{
+      width: 40px;
+    }
   }
   input[type="radio"] {
     width: 20px;
@@ -113,6 +116,7 @@
     border: 2px solid white;
     bottom: 1px;
     box-shadow: 0 0 0 0.07em #ccc;
+    font-weight: normal;
   }
   input[type='radio']:checked + label.radio-pcr {
     background: #8FC742;
@@ -124,6 +128,7 @@
     vertical-align: middle;
     cursor: pointer;
     display: block;
+    font-weight: normal;
   }
   .div-style {
     text-align: left;
@@ -134,6 +139,7 @@
     margin-right: 10px;
     display: inline-block;
     padding: 0;
+    font-weight: normal;
   }
   .params-label {
     border-bottom: 1px solid #ccc;
@@ -142,6 +148,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    font-weight: normal;
     span {      
       display: inline-block;
     }
@@ -151,6 +158,7 @@
     margin-left: 10px;
     display: inline-block;
     padding: 0;
+    font-weight: normal;
   }
   .col-md-6 {
     text-align: left;
