add baseline_method param for advanced setting

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -369,17 +369,17 @@ limitations under the License.
                 <h3 class="h3-cq XH3B">Method</h3>
                 <hr class="hr-section"/>                
                 <label ng-mouseover="hover(sigmoid)" ng-mouseleave="hoverLeave()">
-                  <input type="radio" id="sigmoid" ng-model="baseline_method.name" value="Sigmoid" style="display:none">
+                  <input type="radio" id="sigmoid" ng-model="baseline_method.name" value="sigmoid" style="display:none">
                   <label class="radio-pcr" for="sigmoid"></label>
                   <span class="XB2">Sigmoid</span>
                 </label>
                 <label ng-mouseover="hover(linear)" ng-mouseleave="hoverLeave()">
-                  <input type="radio" id="linear" ng-model="baseline_method.name" value="Linear" style="display:none">
+                  <input type="radio" id="linear" ng-model="baseline_method.name" value="linear" style="display:none">
                   <label class="radio-pcr" for="linear"></label>
                   <span class="XB2">Linear</span>
                 </label>
                 <label ng-mouseover="hover(median)" ng-mouseleave="hoverLeave()">
-                  <input type="radio" id="median" ng-model="baseline_method.name" value="Median" style="display:none">
+                  <input type="radio" id="median" ng-model="baseline_method.name" value="median" style="display:none">
                   <label class="radio-pcr" for="median"></label>
                   <span class="XB2">Median</span>
                 </label>
