add container size

--- a/frontend/javascripts/dynexp/optical_test_single_channel/views/analyze.html
+++ b/frontend/javascripts/dynexp/optical_test_single_channel/views/analyze.html
@@ -1,4 +1,4 @@
-<div class="intro" ng-init="analyzeExperiment()">
+<div class="intro" ng-init="analyzeExperiment()"  style="max-width: 720px;">
   <h2>Optical Diagnostic Results</h2>
 
   <h4 class="text-center" ng-show="analyzing"><b>Analyzing Results...</b></h4>
