add overlay for in progress of edit protocol

--- a/frontend/javascripts/app/views/edit-protocol.html
+++ b/frontend/javascripts/app/views/edit-protocol.html
@@ -54,6 +54,11 @@
             <ellipsis-animated></ellipsis-animated>
           </div>
           <!--<div class="exp_completed_overlay" ng-show="exp_completed"></div> -->
+          <div class="canvas-in-progress">
+            <div class="canvas-message"> IN PROGRESS
+              <ellipsis-animated></ellipsis-animated>
+            </div>
+          </div>
         </div>
       </div>
       <!-- Canvas Part End-->
