--- a/frontend/stylesheets/stage-step.css.scss
+++ b/frontend/stylesheets/stage-step.css.scss
@@ -110,6 +110,25 @@
         position: relative;
         top: -200px;
       }
+      .canvas-in-progress{
+        position: absolute;
+        background: rgba(255, 255, 255, 0.3);
+        width: 100%;
+        height: 100%;
+        top: 0;
+        display: none;
+
+        .canvas-message{
+          color: #333;
+          font-weight: bold;
+          font-size: 14px;
+          font-family: "dinot";
+          left: 50%;
+          top: 50%;
+          position: absolute;
+          transform: translateX(-50%);
+        }
+      }
     }
   }
 
