Fix typos in PIKA and calibration

--- a/frontend/javascripts/dynexp/dual_channel_optical_cal_v2/views/intro.html
+++ b/frontend/javascripts/dynexp/dual_channel_optical_cal_v2/views/intro.html
@@ -35,7 +35,7 @@
           </tbody>
         </table>
         <span class="note">
-          *It is important to pipette the caliration solution from the same stock tube. If the solution is pipetted from different stock tubes, the stock solution should first be mixed.
+          *It is important to pipette the calibration solution from the same stock tube. If the solution is pipetted from different stock tubes, the stock solution should first be mixed.
         </span>
       </div>
     </div>
