--- a/frontend/javascripts/dynexp/pika_test/views/setWellsA.html
+++ b/frontend/javascripts/dynexp/pika_test/views/setWellsA.html
@@ -1,5 +1,5 @@
 		<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 setwells" style="min-height:calc(100vh - 300px)">
-			<h3>Pippette Control & Samples Into A Wells</h3>
+			<h3>Pipetting Control & Samples Into A Wells</h3>
 			<!--<p>[Instruction and notes]</p> -->
 			<table>
 				<tr>
