--- a/frontend/javascripts/dynexp/pika_test/views/setWellsB.html
+++ b/frontend/javascripts/dynexp/pika_test/views/setWellsB.html
@@ -1,5 +1,5 @@
 <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 setwells" >
-	<h3>Pippette Samples Into B Wells</h3>
+	<h3>Pipetting Samples Into B Wells</h3>
 	<!--<p>[Instruction and notes]</p> -->
 
 	<table>
