fix DIAGNOSTICS issue for countdown

--- a/frontend/javascripts/dynexp/optical_test_single_channel/views/analyze.html
+++ b/frontend/javascripts/dynexp/optical_test_single_channel/views/analyze.html
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <div class="text-center" ng-show="analyzedExp">
+  <div class="text-center" ng-show="!analyzing">
     <a ui-sref="settings.root" class="button">CONTINUE</a>
   </div>
 
