update homepage exp status

--- a/frontend/javascripts/app/views/home.html
+++ b/frontend/javascripts/app/views/home.html
@@ -66,11 +66,12 @@
                 <div class="home-page-exp-name B1B">
                   {{exp.experiment.name}}
                 </div>
-                <span class="home-page-exp-created-at B2" ng-show="!exp.experiment.started_at && exp.experiment.time_valid">Created {{exp.experiment.created_at | amCalendar}}, #{{exp.experiment.id}}</span>
+                <span class="home-page-exp-created-at B2" ng-show="!exp.experiment.started_at && exp.experiment.time_valid">Created {{exp.experiment.created_at}}, #{{exp.experiment.id}}</span>
                 <span class="home-page-exp-created-at B2" ng-show="!exp.experiment.started_at && !exp.experiment.time_valid">Created, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && exp.experiment.time_valid">Run {{exp.experiment.started_at | amCalendar}}, #{{exp.experiment.id}}</span>
+                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && exp.experiment.time_valid">Run {{exp.experiment.started_at}}, #{{exp.experiment.id}}</span>
                 <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && !exp.experiment.time_valid">Run previously, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && !exp.experiment.completed_at">IN PROGRESS&nbsp;<ellipsis-animated><ellipsis-animated/></span>
+                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && !exp.experiment.completed_at && (exp.experiment.id!=current_experiment_id || machine_state == 'idle')">Run {{exp.experiment.started_at}}, #{{exp.experiment.id}}</span>
+                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && !exp.experiment.completed_at && exp.experiment.id==current_experiment_id && machine_state != 'idle'">IN PROGRESS&nbsp;<ellipsis-animated><ellipsis-animated/></span>                
               </div>
 <!--               <a class="experiment-links" ng-if="!exp.experiment.started_at && exp.experiment.type === 'test_kit'" ui-sref="pika_test.setWellsA({id: exp.experiment.id})">
                 <div class="home-page-exp-name B1B">
