--- a/frontend/javascripts/app/views/samples-targets.html
+++ b/frontend/javascripts/app/views/samples-targets.html
@@ -29,8 +29,7 @@ limitations under the License.
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 header-samples-targets">
                 <h4 style="display:inline-block">Manage Samples + Targets</h4>
-                <span ng-click="openImportStandards()" class="import-button">Import Standards</span>
-
+                <!-- <span ng-click="openImportStandards()" class="import-button">Import Standards</span> -->
             </div>
 
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 samples" full-height force="true" offset="160" style="padding-left: 70px !important;">
