fix exp header bug

--- a/frontend/javascripts/app/views/directives/header-status.html
+++ b/frontend/javascripts/app/views/directives/header-status.html
@@ -134,7 +134,7 @@
         <div class="pull-right controls SHR text-right">
           <div class="message">
             <span ng-show="experiment.completion_status === 'success'">completed</span>
-            <span ng-show="experiment.completion_status !== 'success'>
+            <span ng-show="experiment.completion_status !== 'success'">
               <span class="failed">failed</span>
               <span ng-show="experiment.completion_status === 'aborted'">
                 user cancelled
