--- a/frontend/javascripts/app/views/experiment/left-menu.html
+++ b/frontend/javascripts/app/views/experiment/left-menu.html
@@ -30,12 +30,12 @@
   <div class="side-menu-content-container">
     <div class="side-menu-name-container">
       <edit-exp-name status="status"></edit-exp-name>
-      <div ng-if="status == 'COMPLETED'" ng-show="exp.time_valid" class="side-menu-exp-status XB1 run-on-status">
+      <div ng-show="exp.time_valid && status == 'COMPLETED'" class="side-menu-exp-status XB1 run-on-status">
         {{runStatus}} {{exp.started_at}}
         <label class="side-menu-exp-status-text success XB1" ng-show="exp.completion_status === 'success'">Completed</label>
         <label class="side-menu-exp-status-text failed XB1" ng-show="exp.completion_status !== 'success'">Failed</label>
       </div>
-      <div ng-if="status == 'COMPLETED'" ng-show="!exp.time_valid" class="side-menu-exp-status XB1 run-on-status">
+      <div ng-show="!exp.time_valid && status == 'COMPLETED'" class="side-menu-exp-status XB1 run-on-status">
         Run previously
         <label class="side-menu-exp-status-text success" ng-show="exp.completion_status === 'success'">Completed</label>
         <label class="side-menu-exp-status-text failed" ng-show="exp.completion_status !== 'success'">Failed</label>
