update calibration failed issue

--- a/frontend/javascripts/dynexp/dual_channel_optical_cal_v2/views/analyze.html
+++ b/frontend/javascripts/dynexp/dual_channel_optical_cal_v2/views/analyze.html
@@ -34,7 +34,7 @@
     </p>
 
     <p class="heating">
-      {{result.errors}}
+      {{result.error}}
     </p>
 
     <a ui-sref="settings.root" class="button">OKAY</a>
