--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -343,7 +343,7 @@ limitations under the License.
                 <h3 class="h3-cq XH3B">Parameters</h3>
                 <hr class="hr-section"/>
                 <label class="text-right params-label" ng-model="minFl" ng-mouseover="hover(minFl)" ng-mouseleave="hoverLeave()">
-                  <span ng-class="{'error-color': errorFl}" class="XB2">Min Flourescence</span>
+                  <span ng-class="{'error-color': errorFl}" class="XB2">Min Fluorescence</span>
                   <input type="text" style="text-align:right" numbers-only ng-model="minFl.value" placeholder="XX" class="XB2B" />
                 </label>
                 <label class="text-right params-label" ng-mouseover="hover(minCq)" ng-mouseleave="hoverLeave()">
