--- a/frontend/javascripts/app/views/samples-targets.html
+++ b/frontend/javascripts/app/views/samples-targets.html
@@ -53,7 +53,7 @@ limitations under the License.
                     <label class="icon-wrapper">
                         <img class="assigned-icon" src="/images/assigned.svg" alt="" ng-show="rowContent.assigned">
                         <div class="assigned-description">
-                            <span>Assigned to Well(s)</span>
+                            <span>Assigned to wells</span>
                         </div>                      
                     </label>
                 </td>
