fix typo for assigned wells

--- a/frontend/javascripts/app/views/samples-targets.html
+++ b/frontend/javascripts/app/views/samples-targets.html
@@ -112,7 +112,7 @@ limitations under the License.
                     <label class="icon-wrapper">
                         <img class="assigned-icon" src="/images/assigned.svg" alt="" ng-show="targetContent.assigned">
                         <div class="assigned-description">
-                            <span>Assigned to Well(s)</span>
+                            <span>Assigned to wells</span>
                         </div>                      
                     </label>
                     <img class="lock-icon" src="/images/lock.svg" alt="" ng-show="targetContent.imported">
